new commit: test commit

--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   "homepage": "https://github.com/HarshDev1809/Fun-Ui#readme",
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
+    "@babel/plugin-transform-runtime": "^7.25.4",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@babel/runtime": "^7.25.4",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^2.79.1",
